deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-practice-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: golang-practice
    spec:
      containers:
        - name: golang-practice-container
          image: er230059/golang-practice
          ports:
            - containerPort: 8000
  selector:
    matchLabels:
      app: golang-practice
