service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-practice-service
spec:
  selector:
    app: golang-practice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  clusterIP: None
